--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 30px;
+  margin-bottom: 2em;
   text-shadow:0.3em;
   box-shadow: aquamarine;
 
@@ -41,9 +41,9 @@ header {
   font-size:x-large;
   background-color: #fff;
   color: #333;
-  border-radius: 15px;
-  padding: 40px 50px;
-  margin: 20px 0;
+  border-radius: 1.cap;
+  padding: 2em 2.5em;
+  margin: 1% 0;
   position: relative;
 }
 
@@ -61,19 +61,20 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin: 30px 0 40px;
+  margin: 2% 0 0.7em;
 }
 
 .rating li,
 .num-display {
   position: relative;
   background: #f4f4f4;
-  width: 50px;
-  height: 50px;
-  padding: 10px;
+  width: 2rem;
+  height: 2rem;
+  padding: 0.5em;
   text-align: center;
   border-radius: 50%;
-  font-size: 19px;
+  font-size: 0.7em;
+  font-feature-settings: "blwf";
   border: 1px #eee solid;
   transition: 0.3s;
 }
@@ -121,15 +122,15 @@ display: flex;
 .input-group {
   display: flex;
   flex-direction: row;
-  border: 1px solid #ccc;
-  padding: 8px 10px;
-  border-radius: 8px;
+  border: 0.8px solid #ccc;
+  padding: 0.6% 0.9%0;
+  border-radius: 0.8%;
 }
 
 input {
   flex-grow: 2;
   border: none;
-  font-size: 1.4rem;
+  font-size: 1em;
 }
 
 input:focus {
@@ -146,8 +147,8 @@ input:focus {
 
 .num-display {
   position: absolute;
-  top: -10px;
-  left: -10px;
+  top: -0.7%;
+  left: -0.7%;
 }
 
 .close,
@@ -165,13 +166,13 @@ input:focus {
 }
 
 .btn {
-  size: 5em;
+  size: 5%;
   color: #fff;
   border: 0;
-  border-radius: 8px;
+  border-radius: 0.8%;
   color: #fff;
-  width: 100px;
-  height: 40px;
+  width: 15%;
+  height: 20%;
   cursor: pointer;
   font-size: 1.6rem;
   font-weight: bold;
@@ -251,6 +252,6 @@ input:focus {
   }
 
   .input-group input {
-    width: 80%;
+    width: 84%;
   }
 }
