--- a/src/index.css
+++ b/src/index.css
@@ -38,12 +38,19 @@ header {
 }
 
 .card {
-  font-size:x-large;
+  font-size:large;
   background-color: #fff;
   color: #333;
-  border-radius: 1.cap;
-  padding: 2em 2.5em;
-  margin: 1% 0;
+  display:inline-block;
+  padding:0.35em 1.2em;
+  border:0.1em solid #FFFFFF;
+  margin:0 0.3em 0.3em 0;
+  border-radius:0.12em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-weight:300;
+  text-align:center;
+  transition: all 0.2s;
   position: relative;
 }
 
