--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ header {
 }
 
 .card {
-  font-size:large;
+  font-size:x-large;
   background-color: #fff;
   color: #333;
   display:inline-block;
