--- a/src/index.css
+++ b/src/index.css
@@ -41,11 +41,9 @@ header {
   font-size:x-large;
   background-color: #fff;
   color: #333;
-  display:inline-block;
-  padding:0.35em 1.2em;
-  border:0.1em solid #FFFFFF;
-  margin:0 0.3em 0.3em 0;
-  border-radius:0.12em;
+  border-radius: 1.cap;
+  padding: 2em 2.5em;
+  margin: 1% 0;
   box-sizing: border-box;
   text-decoration:none;
   text-align:center;
