--- a/src/index.css
+++ b/src/index.css
@@ -256,7 +256,7 @@ transition: all 0.2s;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    margin: 1em 0 1.5em;
+    margin: 30px 0 40px;
   }
 
   .input-group input {
