--- a/src/index.css
+++ b/src/index.css
@@ -142,7 +142,7 @@ input:focus {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 1rem;
+  font-size: 3dvb;
 }
 
 .num-display {
