--- a/src/index.css
+++ b/src/index.css
@@ -261,10 +261,10 @@ transition: all 0.2s;
 
   .input-group input {
     width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+    border: 1px solid #ccc;
+  border-radius: 80%;
   box-sizing: border-box;
-  resize: vertical;
+  resize: both;
+  font-size: larger;
   }
 }
