--- a/src/index.css
+++ b/src/index.css
@@ -172,6 +172,7 @@ border:0.1em solid #FFFFFF;
 margin:0 0.3em 0.3em 0;
 border-radius:0.12em;
 box-sizing: border-box;
+block-size: 20%;
 text-decoration:none;
 font-weight:300;
 color:#FFFFFF;
@@ -260,7 +261,7 @@ transition: all 0.2s;
   }
 
   .input-group input {
-    width: 100%;
+    width: 80%;
     border: 1px solid #ccc;
   border-radius: 80%;
   box-sizing: border-box;
