--- a/src/index.css
+++ b/src/index.css
@@ -120,10 +120,15 @@ display: flex;
 }
 
 .input-group {
-  display: flex;
-  flex-direction: row;
+  float:left;
+  margin-top:2vh;
+  padding:0px;
+  width:100%;
+  display:flex;
+  flex-direction:row;
+  word-break: break-all;
   border: 0.8px solid #ccc;
-  width: 84%;
+
  
 }
 
@@ -261,11 +266,14 @@ transition: all 0.2s;
   }
 
   .input-group input {
-    width: 80%;
-    border: 1px solid #ccc;
-   box-sizing: border-box;
-  size: 80;
+    float:left;
+    margin-top:2vh;
+    padding:0px;
+    width:100%;
+    display:flex;
+    flex-direction:row;
+    word-break: break-all;
   resize: both;
-  font-size: larger;
+  font-size: medium;
   }
 }
