--- a/src/index.css
+++ b/src/index.css
@@ -145,6 +145,7 @@ input:focus {
 .feedback-stats {
   color: #fff;
   display: flex;
+  margin: 1cqw;
   justify-content: space-between;
   align-items: center;
   font-size: 3dvb;
