--- a/src/index.css
+++ b/src/index.css
@@ -272,7 +272,7 @@ transition: all 0.2s;
     width:100%;
     display:flex;
     flex-direction:row;
-    resize: both;
+    resize: horizontal;
   font-size: medium;
   }
 }
