--- a/src/index.css
+++ b/src/index.css
@@ -171,7 +171,8 @@ input:focus {
 }
 
 .btn {
-  display:inline-block;
+  -ms-layout-grid: right;
+    display:inline-block;
 padding:0.35em 1.2em;
 border:0.1em solid #FFFFFF;
 margin:0 0.3em 0.3em 0;
@@ -272,7 +273,6 @@ transition: all 0.2s;
     width:100%;
     display:flex;
     flex-direction:row;
-    resize: horizontal;
-  font-size: medium;
+    font-size: medium;
   }
 }
