--- a/src/index.css
+++ b/src/index.css
@@ -22,24 +22,24 @@ ul {
 .container {
   max-width: 768px;
   margin: auto;
-  padding: 0 20px;
+  padding: 0 1.25rem;
 }
 
 header {
-  height: 70px;
+  height: 4.375rem;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 30px;
+  margin-bottom: 1.875rem;
 }
 
 .card {
   background-color: #fff;
   color: #333;
-  border-radius: 15px;
-  padding: 40px 50px;
-  margin: 20px 0;
+  border-radius: 0.93rem;
+  padding: 2.5rem 3.125rem;
+  margin: 1.25rem 0;
   position: relative;
 }
 
@@ -49,7 +49,7 @@ header {
 }
 
 .card h2 {
-  font-size: 22px;
+  font-size: 1.375rem;
   font-weight: 600;
   text-align: center;
 }
@@ -58,30 +58,30 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin: 30px 0 40px;
+  margin: 1.875rem 0 2.5rem;
 }
 
 .rating li,
 .num-display {
   position: relative;
   background: #f4f4f4;
-  width: 50px;
-  height: 50px;
-  padding: 10px;
+  width: 3.125rem;
+  height: 3.125rem;
+  padding: 0.625rem;
   text-align: center;
   border-radius: 50%;
-  font-size: 19px;
-  border: 1px #eee solid;
+  font-size: 1.185rem;
+  border: 0.05rem #eee solid;
   transition: 0.3s;
 }
 
 .rating li label {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 50px;
-  height: 50px;
-  padding: 10px;
+  top: 60%;
+  left: 60%;
+  width: 3.125rem;
+  height: 3.125rem;
+  padding: 0.625rem;
   border-radius: 50%;
   transform: translate(-50%, -50%);
   cursor: pointer;
@@ -105,15 +105,15 @@ header {
 .input-group {
   display: flex;
   flex-direction: row;
-  border: 1px solid #ccc;
-  padding: 8px 10px;
-  border-radius: 8px;
+  border: 0.056 solid #ccc;
+  padding: 0.5rem 0.625rem;
+  border-radius: 0.5rem;
 }
 
 input {
   flex-grow: 2;
   border: none;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 input:focus {
@@ -129,31 +129,31 @@ input:focus {
 
 .num-display {
   position: absolute;
-  top: -10px;
-  left: -10px;
+  top: -0.625rem;
+  left: -0.625rem;
 }
 
 .close,
 .edit {
   position: absolute;
-  top: 10px;
-  right: 20px;
+  top: 0.625rem;
+  right: 1.25rem;
   cursor: pointer;
   background: none;
   border: none;
 }
 
 .edit {
-  right: 40px;
+  right: 2.5rem;
 }
 
 .btn {
   color: #fff;
   border: 0;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   color: #fff;
-  width: 100px;
-  height: 40px;
+  width: 6.25rem;
+  height: 2.5rem;
   cursor: pointer;
 }
 
@@ -182,7 +182,7 @@ input:focus {
 }
 
 .message {
-  padding-top: 10px;
+  padding-top: 0.625rem;
   text-align: center;
   color: rebeccapurple;
 }
@@ -206,16 +206,16 @@ input:focus {
 }
 
 .about h1 {
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
 }
 
 .about p {
-  margin: 10px 0;
+  margin: 0.625rem 0;
 }
 
 @media (max-width: 600px) {
   .rating li {
-    margin: 10px 3px;
+    margin: 0.625rem 0.1875rem;
   }
 
   .rating {
@@ -223,10 +223,10 @@ input:focus {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    margin: 30px 0 40px;
+    margin: 1.875rem 0 2.5rem;
   }
 
   .input-group input {
-    width: 80%;
+    width: 85%;
   }
 }
